docs/scripts/elastic/eck/kibana-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: kiss-kibana
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - $KIBANA_DOMAIN
      secretName: wildcard-kiss-tls
  rules:
    - host: $KIBANA_DOMAIN
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: kiss-kb-http
                port:
                  number: 5601
